[package]
name = "rust_os"
version = "0.1.0"
authors = ["wy <wangy10@chinatelecom.cn>"]
edition = "2018"

[dependencies.lazy_static]
version = "*"
features = ["spin_no_std"]

[dependencies]
bootloader = "*"
volatile = "*"
spin = "*"
x86_64 = "*"
uart_16550 = "*"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.bootimage]
test-timeout = 300
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33

[[test]]
name = "panic_handler"
harness = false
